--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,32 @@
             android:layout_marginBottom="50dp"
             android:scaleType="fitCenter"
             android:text="Take Photo"
+            android:backgroundTint="@color/white"
+            android:background="@drawable/shape_circle"
+            android:gravity="center"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:elevation="2dp" />
+             />
+        <Button
+            android:id="@+id/camera_switch"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginBottom="50dp"
+            android:scaleType="fitCenter"
+            android:text="camera switch"
+            android:backgroundTint="@color/white"
+            android:background="@drawable/shape_circle"
+            android:gravity="center"
+            app:layout_constraintStart_toEndOf="@id/camera_capture_button"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
+        <androidx.camera.view.PreviewView
+            android:id="@+id/viewFinder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
