--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,16 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             />
+<!--        <ImageButton-->
+<!--            android:id="@+id/camera_switch"-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="20dp"-->
+<!--            android:src="@drawable/ic_baseline_flip_camera_android_24"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            android:layout_marginEnd="15dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            />-->
 
         <androidx.camera.view.PreviewView
             android:id="@+id/viewFinder"
